# LangGraph-Zero-to-Hero

./: Best Practices for Python Development in 2026.md  State of Multimodal LLMs in 2026.md  Understanding Self Attention in Transformer Architecture.md  charting_the_future_of_agentic_ai_a_strategic_roadmap.md  chatbot.db  checkpoints.sqlite  pyproject.toml  requirements.txt  threads.json
01_Basics/: 02_simple_llm_workflow.py
01_Sequential_Workflows/: 02_story_write_workflow.py
02_Parallel_Workflows/: 01_parallel_debate.py  02_parallel_structure_essay_workflow.py
03_Conditional_Workflows/: 01_calculator_workflow.py  02_llm_base_workflow.py
04_Cyclic_Workflows/: 01_db_connect_retry_workflow.py
05_Persistence_Workflows/: 01_joke_explanation_workflow.py
07_Ui_Simple_Chatbot_workflow/: frontend_chatbot.py
08_UI_Multi_Therad_Chatbot/: backend.py  frontend.py
09_LangSmith_Workflows/: 01_rag_chatbot.py  02_tracing_fuction.py
10_MCP_Workflows/: 01_basic_mcp_workflow.py  custom_calculator_mcp.py
11_Rag_Chatbot_Workflow/: rag_chatbot_backend.py  rag_chatbot_frontend.py
12_HITL_Workflows/Ticket_Book_Workflow/: backend.py  frontend.py
13_SubGraph_Workflows/: shared_subgraph.py  urdu_translater.py
14_Advance_Agent_Workflows/: 01_linkedin_post_workflow.py  02_blog_writer_workflow.py  03_bog_withimage_workflow.py
15_CRAG_Workfows/: 01_refining_rag.py  02_crag_rvaluter.py  03_webserch_crag.py
Basics_workflows/: 01_basic_chatbot.py
Basics_workflows/Multi_Therad_Chatbot/: backend.py
my_chroma_db/: chroma.sqlite3
(+2 files in other folders)
